# FreeRDP

./: ChangeLog
.github/workflows/: freebsd.yml
channels/: CMakeLists.txt
channels/cliprdr/server/: cliprdr_main.c
channels/rdpdr/client/: rdpdr_main.c
channels/rdpewa/: CMakeLists.txt
channels/urbdrc/client/: urbdrc_main.c
channels/video/client/: video_main.c
ci/cmake-preloads/: config-linux-all.txt  config-linux-alt-arch.txt  config-macosx.txt  config-qa-static.cmake  config-qa.cmake  config-windows.txt
client/SDL/: CMakeLists.txt
client/Windows/: wf_client.c  wf_floatbar.c  wf_floatbar.h  wf_rail.c
client/X11/: xf_cliprdr.c  xf_disp.c  xf_keyboard.c
client/common/: CMakeLists.txt  cmdline.c  cmdline.h
cmake/: ConfigOptions.cmake  GetProjectVersion.cmake
include/freerdp/: freerdp.h  settings_types_private.h
libfreerdp/: CMakeLists.txt
libfreerdp/cache/: bitmap.c
libfreerdp/codec/: CMakeLists.txt  dsp.c  h264_ffmpeg.c  h264_mf.c  progressive.c
libfreerdp/common/: settings_getters.c  settings_str.h
libfreerdp/core/: connection.c  rdp.c  server.c  settings.c  transport.c  utils.c
libfreerdp/crypto/: tls.c
libfreerdp/gdi/: gfx.c
rdtk/librdtk/: CMakeLists.txt
scripts/: android-build.conf
server/common/: CMakeLists.txt
server/proxy/: CMakeLists.txt  FreeRDP-ProxyConfig.cmake.in  pf_client.c  pf_config.c  pf_context.c  pf_server.c
server/proxy/test/: CMakeLists.txt  TestFreeRDPProxyConfig.c
server/proxy/test/conf/: test-no-fixed-target.conf  test-no-host-port.conf  test1.conf
server/shadow/: CMakeLists.txt  shadow_client.c
(+102 files in other folders)
